force-app/main/default/objects/ScoutingSnapshot__c/ScoutingSnapshot__c.object-meta.xml
<CustomObject>
    <description>Historisation des snapshots scouting issus de Data Cloud.</description>
    <label>Scouting Snapshot</label>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Scouting Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scouting Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>