force-app/main/default/objects/ScoutingSnapshot__c/fields/DataConfidence__c.field-meta.xml
<CustomField>
    <fullName>DataConfidence__c</fullName>
    <label>Data Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>