force-app/main/default/objects/ScoutingSnapshot__c/fields/SnapshotDateTime__c.field-meta.xml
<CustomField>
    <fullName>SnapshotDateTime__c</fullName>
    <label>Snapshot Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>